# laskutys

./: .gitignore  README.md  justfile  main.typ  template.typ  typst.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  color_presets.md  development.md
docs/images/: example_customize_colors.typ
examples/: customize_colors.typ
examples/customize_colors/: main.typ
rust-tools/: Cargo.toml
rust-tools/.cargo/: config.toml
rust-tools/src/: items.rs  lib.rs  utils.rs
rust_tools/: Cargo.toml
rust_tools/src/: utils.rs
rust_tools/src/utils/: bank_barcode.rs  cbor_wrapper.rs  consolidate_vat.rs  iban.rs  reference_number.rs
src/: config.typ  hello_world.typ  lib.typ  presets.typ  translations.toml
src/components/: bank_barcode.typ  bank_qrcode.typ  calculation_details.typ  header.typ  invoice.typ  item-list.typ  item_list.typ  item_row.typ  legal_entity.typ  payment-info.typ  payment_info.typ  vat-section.typ  vat_row.typ  vat_section.typ
src/utils/: formatter.typ  generate_invoice_number.typ  get-bank-qr-payload.typ  get_bank_barcode_payload.typ  get_bank_qr_payload.typ  get_decimal_separator.typ  get_invoice_number.typ  get_reference_number.typ  preprocess_items.typ  vat_calculation.typ
template/: data.yaml  main.typ
tests/generate_invoice_number/: test.typ
tests/get-bank-qr-payload/: test.typ
tests/get_bank_qr_payload/: test.typ
tests/get_invoice_number/: test.typ
tests/get_reference_number/: test.typ
tests/preprocess-items/: test.typ
tests/preprocess_items/: test.typ
tools/: Cargo.toml
tools/src/: config.rs  items.rs  (+1 more)
(+3 files in other folders)
