[package]
name = "rust_tools"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust_decimal = { version = "1.37.2", features = ["macros", "serde-str"] }
ciborium = "0.2.2"
itertools = "0.14.0"
serde = "1.0.219"
wasm-minimal-protocol = "0.1.0"
iso_11649 = "0.1.2"
iban = "0.2.0"
bank-barcode = "0.1.0"

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"
